<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SampleFragmentSwitch</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="loginname">输入手机号码</string>
    <string name="loginpwd">输入密码</string>
    <string name="login_button">登陆</string>
    <string name="login_regist">注册账号</string>
    <string name="login_qa">登陆遇到问题</string>
    <string name="login_warn">用户未登陆，请先登陆</string>
    <string name="phone_number_err">"手机号码错误"</string>
    <string name="pwd_err">"密码不能为空"</string>

    <string-array name="new_picese">
        <item>不限</item>
        <item>5000以下</item>
        <item>5000~6000元</item>
        <item>6000~8000元</item>
        <item>8000~10000元</item>
        <item>10000以上</item>
    </string-array>
    <string-array name="old_house">
        <item>不限</item>
        <item>30</item>
        <item>40-50</item>
        <item>50-60</item>
        <item>60-80</item>
        <item>80-100</item>
        <item>100-150</item>
        <item>150-200</item>
    </string-array>
    <string-array name="housetype">
        <item>不限</item>
        <item>一室</item>
        <item>二室</item>
        <item>三室</item>
        <item>四室以上</item>
    </string-array>
    <string-array name="Mj">
        <item>不限</item>
        <item>50-70</item>
        <item>70-90</item>
        <item>90-110</item>
        <item>110-150</item>
        <item>150-300</item>
    </string-array>
    <string-array name="age">
        <item>不限</item>
        <item>0-2</item>
        <item>2-5</item>
        <item>5-10</item>
    </string-array>
    <string-array name="ztype">
        <item>不限</item>
        <item>公寓</item>
        <item>普通住宅</item>
        <item>别墅</item>
        <item>其它</item>
    </string-array>
    <string-array name="desc">
        <item>默认排序</item>
        <item>面积从大到小</item>
        <item>面积从小到大</item>
        <item>总价从低到高</item>
        <item>总价从高到低</item>
    </string-array>

    <string name="register">注册</string>

</resources>