<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@android:color/background_light"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/login_topline"
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="@color/holo_blue_bright" />

    <LinearLayout style="@style/login_input_style" >

        <EditText
               android:drawableLeft="@drawable/username"
            android:id="@+id/login_username"
			style="@style/login_input_edite"
            android:hint="@string/loginname"
             />
	<LinearLayout 
	    style="@style/login_input_edite"
	    android:orientation="horizontal"
	    >
	      <EditText
            android:id="@+id/login_username"
            android:maxLines="1"
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:hint="输入验证码"
             />
	    
	      <Button 
	          android:layout_width="wrap_content"
	          android:layout_height="wrap_content"
	          android:text="获取验证码"
	          
	          />
	    
	</LinearLayout>
        
        <EditText
            android:drawableLeft="@drawable/password"
            android:id="@+id/login_pwd"
            android:password="true"
            style="@style/login_input_edite"
            android:hint="@string/loginpwd" />
    </LinearLayout>

    <Button
        android:id="@+id/register"
        style="@style/login_input_style"
        android:layout_height="40dp"
        android:background="@drawable/shape_login"
        android:text="@string/register" />

    <LinearLayout 
        
       style="@style/login_input_style"
       android:layout_marginTop="0dp"
       android:orientation="horizontal"
        >

         
 
        
    </LinearLayout>
    
</LinearLayout>